# churn_prediction

./: README.md  data_preprocessing.py  pyproject.toml
notebooks/: 01_analysis.ipynb  02_model.ipynb  analysis.ipynb
